<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:background="@android:color/holo_blue_dark"

            android:elevation="6dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" tools:targetApi="lollipop">

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/time_bank"
                android:textColor="@android:color/white" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:ignore="MergeRootFrame" >

        <EditText
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="275dp"
            android:ems="10"
            android:hint="@string/description"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/please_enter_your_information_below_to_register"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:fontFamily="sans-serif-medium" />

        <EditText
            android:id="@+id/namereg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/usernamereg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="82dp"
            android:ems="10"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/emailreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/addressreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="177dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/passwordreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="223dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:importantForAutofill="no" tools:targetApi="o" />

        <Button
            android:id="@+id/confirmreg"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="384dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:onClick="confirmreg"
            android:text="@string/confirm_registration" />
    </FrameLayout>


</android.support.design.widget.CoordinatorLayout>
