<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:background="@android:color/holo_blue_dark"

            android:elevation="6dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" tools:targetApi="lollipop">

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/time_bank"
                android:textColor="@android:color/white" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:ignore="MergeRootFrame" >


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:text="@string/view_confirmation_page_below"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="24sp"
            app:fontFamily="sans-serif-medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/serviceform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/service_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/confservice"
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/issuerform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/name_of_issuer"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/confissuer"
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/spentform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/time_spent"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/confspent"
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="20sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/locationform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/location_of_service"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/conflocation"
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="275dp"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/arrivalform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/time_until_arrival"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/confarrival"
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/confback"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="360dp"
            android:gravity="center"
            android:text="@string/back_to_home_page" />

        <Button
            android:id="@+id/confreview"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="420dp"
            android:gravity="center"
            android:text="@string/leave_a_review" />

    </FrameLayout>


</android.support.design.widget.CoordinatorLayout>
