<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:background="@android:color/holo_blue_dark"

            android:elevation="6dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" tools:targetApi="lollipop">

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/time_bank"
                android:textColor="@android:color/white" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:ignore="MergeRootFrame" >


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:text="@string/view_your_credentials_below"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameform"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/nameform"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profname"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/usernameform"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/usernameprof"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profusername"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="105dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/addressform"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/addressformm"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profaddress"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/balanceform"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/time_balance"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profbalance"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20sp" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="185dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/typeform"
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/type_of_user"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/proftype"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/descriptionform"
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/descriptionform"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profdescription"
                android:layout_width="350dp"
                android:layout_height="144dp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="20sp" />
        </LinearLayout>
    </FrameLayout>


</android.support.design.widget.CoordinatorLayout>
